// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesignForm renders  component 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={3}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      title="Design information"
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            autoFocus={true}
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Title"
            multiline={true}
            name="rek_title"
            placeholder="Title of design"
            required={true}
            rows={3}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          sm={12}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Project name"
            name="fez_record_search_key_project_name.rek_project_name"
            placeholder="Title of project"
            type="text"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Location"
            name="fez_record_search_key_location[0].rek_location"
            placeholder="Type the geographical location for the design itself."
            type="text"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Publisher"
            name="fez_record_search_key_publisher.rek_publisher"
            placeholder="Enter the name of the client, builder or curator of the work."
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Place of publication"
            name="fez_record_search_key_place_of_publication.rek_place_of_publication"
            placeholder="Enter the geographical location for the client, builder or curator of the work."
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            allowPartial={true}
            className="requiredHintField"
            component={[Function]}
            disabled={false}
            floatingTitle="Project start date"
            floatingTitleRequired={true}
            hasError=""
            name="fez_record_search_key_project_start_date.rek_project_start_date"
            partialDateFieldId="rek-project-start-date"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            allowPartial={true}
            component={[Function]}
            disabled={false}
            floatingTitle="End date"
            hasError=""
            name="fez_record_search_key_end_date.rek_end_date"
            partialDateFieldId="rek-end-date"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <p>
            For more information about identification of author/creator/designer, click
             
            <a
              href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836546"
              target="_blank"
            >
              here
            </a>
          </p>,
          "title": "Designers",
        }
      }
      title="Designer name"
    >
      <WithStyles(ForwardRef(Typography))>
        Please provide a list of designers and then select your name from the list.
      </WithStyles(ForwardRef(Typography))>
      <Field
        component={[Function]}
        contributorEditorId="authors"
        disabled={false}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButton": "Add designer",
                "descriptionStep1": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                   
                  - Please 
                  <b>
                    add to a list of designers below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "descriptionStep1NoStep2": <div>
                  Please 
                  <b>
                    add to a list of designers below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "identifierLabel": "UQ identifier (if available)",
                "nameAsPublishedFieldId": "designers-name-as-published-field",
                "nameAsPublishedHint": "Type the name exactly as published",
                "nameAsPublishedLabel": "Enter each designer's name as published (eg. Smith, John)",
              },
            },
            "header": Object {
              "locale": Object {
                "contributorAssignmentColumn": "Select your name",
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "descriptionStep2": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 2 of 2
                  </span>
                   
                  - Please 
                  <b>
                    select your name
                  </b>
                   from the list below (if applicable).
                </div>,
                "identifierColumn": "UQ identifier",
                "nameColumn": "Designers name as published",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "editHint": "Edit this item",
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
                "selectHint": "Select this designer ([name]) to assign it as you",
                "selectedHint": "This is you",
                "suffix": " listed designer",
                "unselectedHint": "Select this to confirm this designer is you",
              },
            },
          }
        }
        name="authors"
        required={true}
        showContributorAssignment={true}
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      title="Optional information"
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Notes (not publicly viewable)"
            multiline={true}
            name="comments"
            placeholder="Add any additional information here."
            rows={1}
            type="text"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Link"
            name="rek_link"
            placeholder="Enter URL for this work."
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Link description"
            name="rek_link_description"
            type="text"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`DesignForm renders  should show architectural content correctly 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={3}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      title="Design information"
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            autoFocus={false}
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Title"
            multiline={true}
            name="rek_title"
            placeholder="Title of design"
            required={true}
            rows={3}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          sm={12}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Project name"
            name="fez_record_search_key_project_name.rek_project_name"
            placeholder="Title of project"
            type="text"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Location"
            name="fez_record_search_key_location[0].rek_location"
            placeholder="Type the geographical location for the design itself."
            type="text"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Publisher"
            name="fez_record_search_key_publisher.rek_publisher"
            placeholder="Enter the name of the client, builder or curator of the work."
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Place of publication"
            name="fez_record_search_key_place_of_publication.rek_place_of_publication"
            placeholder="Enter the geographical location for the client, builder or curator of the work."
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            allowPartial={true}
            className="requiredHintField"
            component={[Function]}
            disabled={false}
            floatingTitle="Project start date"
            floatingTitleRequired={true}
            hasError=""
            name="fez_record_search_key_project_start_date.rek_project_start_date"
            partialDateFieldId="rek-project-start-date"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            allowPartial={true}
            component={[Function]}
            disabled={false}
            floatingTitle="End date"
            hasError=""
            name="fez_record_search_key_end_date.rek_end_date"
            partialDateFieldId="rek-end-date"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <p>
            For more information about identification of author/creator/designer, click
             
            <a
              href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836546"
              target="_blank"
            >
              here
            </a>
          </p>,
          "title": "Designers",
        }
      }
      title="Designer name"
    >
      <WithStyles(ForwardRef(Typography))>
        Please provide a list of designers and then select your name from the list.
      </WithStyles(ForwardRef(Typography))>
      <Field
        component={[Function]}
        contributorEditorId="authors"
        disabled={false}
        isNtro={true}
        locale={
          Object {
            "form": Object {
              "locale": Object {
                "addButton": "Add designer",
                "descriptionStep1": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                   
                  - Please 
                  <b>
                    add to a list of designers below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "descriptionStep1NoStep2": <div>
                  Please 
                  <b>
                    add to a list of designers below
                  </b>
                  , in the format and order that they are published.
                </div>,
                "identifierLabel": "UQ identifier (if available)",
                "nameAsPublishedFieldId": "designers-name-as-published-field",
                "nameAsPublishedHint": "Type the name exactly as published",
                "nameAsPublishedLabel": "Enter each designer's name as published (eg. Smith, John)",
              },
            },
            "header": Object {
              "locale": Object {
                "contributorAssignmentColumn": "Select your name",
                "deleteAll": "Remove all items",
                "deleteAllConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete all items?",
                  "confirmationTitle": "Delete all",
                },
                "descriptionStep2": <div>
                  <span
                    className="authorSteps"
                  >
                    Step 2 of 2
                  </span>
                   
                  - Please 
                  <b>
                    select your name
                  </b>
                   from the list below (if applicable).
                </div>,
                "identifierColumn": "UQ identifier",
                "nameColumn": "Designers name as published",
                "reorderColumn": "Reorder items",
              },
            },
            "row": Object {
              "locale": Object {
                "deleteHint": "Remove this item",
                "deleteRecordConfirmation": Object {
                  "cancelButtonLabel": "No",
                  "confirmButtonLabel": "Yes",
                  "confirmationMessage": "Are you sure you want to delete this item?",
                  "confirmationTitle": "Delete item",
                },
                "editHint": "Edit this item",
                "moveDownHint": "Move item down the order",
                "moveUpHint": "Move item up the order",
                "selectHint": "Select this designer ([name]) to assign it as you",
                "selectedHint": "This is you",
                "suffix": " listed designer",
                "unselectedHint": "Select this to confirm this designer is you",
              },
            },
          }
        }
        name="authors"
        required={true}
        showContributorAssignment={true}
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
  <NtroFields
    disableDeleteAllGrants={false}
    hideAbstract={false}
    hideAudienceSize={true}
    hideEndPage={true}
    hideExtent={false}
    hideGrants={false}
    hideIsmn={true}
    hideIsrc={true}
    hideIssue={true}
    hideLanguage={false}
    hideOriginalFormat={false}
    hidePeerReviewActivity={false}
    hideSeries={false}
    hideStartPage={true}
    hideVolume={true}
    locale={
      Object {
        "contributionStatement": Object {
          "fields": Object {
            "impactStatement": Object {
              "label": <span>
                Creator research statement*. Include Background, Contribution and Significance
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (not for public view)
                </span>
              </span>,
              "placeholder": "Remember to include substantiation of your major or minor scale/significance claim above.",
            },
            "scaleOfWork": Object {
              "description": "Select the option that best describes the significance of the work.",
              "label": <span>
                Scale/Significance of work*
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (not for public view)
                </span>
              </span>,
            },
          },
          "help": Object {
            "buttonLabel": "CLOSE",
            "text": <React.Fragment>
              <WithStyles(ForwardRef(Typography))
                component="h4"
                variant="h6"
              >
                Creator research statement
              </WithStyles(ForwardRef(Typography))>
              <p>
                For more information about the research statement, click
                 
                <a
                  href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836548"
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                  target="_blank"
                >
                  here
                </a>
              </p>
            </React.Fragment>,
            "title": "Author/Creator research statement",
          },
          "title": "Author/Creator research statement",
        },
        "grantEditor": Object {
          "title": "Grant details",
        },
        "metadata": Object {
          "fields": Object {
            "abstract": Object {
              "label": <span>
                Abstract/Description* 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (for public view)
                </span>
              </span>,
              "placeholder": "Enter a brief description of the work",
            },
            "audienceSize": Object {
              "label": "Audience size",
            },
            "endPage": Object {
              "label": "End page",
            },
            "extent": Object {
              "label": "Total pages/Extent",
              "placeholder": "Enter total pages, size or duration of work",
            },
            "issue": Object {
              "label": "Issue",
            },
            "language": Object {
              "label": "Language",
              "selectPrompt": "Please select languages as required",
            },
            "notes": Object {
              "label": "Notes",
            },
            "peerReviewActivity": Object {
              "label": "Quality indicators",
            },
            "physicalDescription": Object {
              "label": "Physical description",
              "placeholder": "Building, Exhibition, Performance, Composition",
            },
            "series": Object {
              "floatingLabelText": "Series",
              "hintText": "Enter the name of publication, performance, recording, or event series",
            },
            "startPage": Object {
              "label": "Start page",
            },
            "volume": Object {
              "label": "Volume",
            },
          },
          "title": "NTRO data",
        },
      }
    }
    showContributionStatement={false}
    showSignificance={false}
    submitting={false}
  />
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <StandardCard
      title="Optional information"
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Notes (not publicly viewable)"
            multiline={true}
            name="comments"
            placeholder="Add any additional information here."
            rows={1}
            type="text"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Link"
            name="rek_link"
            placeholder="Enter URL for this work."
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "classes": [Function],
                  "help": [Function],
                  "innerRef": [Function],
                  "textFieldId": [Function],
                },
                "render": [Function],
              }
            }
            disabled={false}
            fullWidth={true}
            label="Link description"
            name="rek_link_description"
            type="text"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </StandardCard>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
